<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01000000"
    tools:context=".PasLoginActivity">

    <LinearLayout
        android:id="@+id/lay_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">



        <LinearLayout
            android:id="@+id/ll_paslogin_username"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/line3"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_paslogin_username_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_username" />

            <EditText
                android:id="@+id/et_paslogin_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="15"
                android:focusable="true"
                android:hint="@string/login_input_username_hint"
                android:imeOptions="actionDone"
                android:inputType="textPhonetic"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_paslogin_username_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_paslogin_pwd"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/line3"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_paslogin_pwd_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/ic_login_password" />

            <EditText
                android:id="@+id/et_paslogin_pwd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:minLines="1"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/login_line_color"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_16" />

            <ImageView
                android:id="@+id/iv_paslogin_pwd_del"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@null"
                android:scaleType="fitCenter"
                android:visibility="gone"
                app:srcCompat="@mipmap/ic_clear" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_paslogin_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_submit"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/bt_paslogin_register"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_login_register"
            android:elevation="0dp"
            android:outlineProvider="none"
            android:text="@string/login_register_hint"
            android:textColor="@color/white"
            android:textSize="@dimen/font_18"
            android:translationZ="0dp"
            tools:targetApi="lollipop" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/cb_remember_login"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:background="@drawable/ic_selector_checkbox"
                android:button="@null"
                android:checked="true"
                android:contentDescription="@null"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_12"
                tools:visibility="visible" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_hold_hint"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_login_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="@string/login_forget_hint"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:layout_weight="3" />

        <LinearLayout
            android:id="@+id/ll_login_QQ"
            android:layout_width="71dp"
            android:layout_height="52dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_username_QQicon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:contentDescription="@null"
                app:srcCompat="@mipmap/qq_icon" />

            <TextView
                android:id="@+id/tv_login_QQ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="QQ"
                android:textColor="#17c98b"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/bt_other_login"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginLeft="24dp"-->
<!--            android:layout_marginTop="140dp"-->
<!--            android:layout_marginRight="24dp"-->
<!--            android:background="@drawable/bg_login_register"-->
<!--            android:elevation="0dp"-->
<!--            android:outlineProvider="none"-->
<!--            android:text="QQ登陆"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="@dimen/font_18"-->
<!--            android:translationZ="0dp"-->
<!--            tools:targetApi="lollipop" />-->

        <View
            android:id="@+id/ll_login_layer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0"
            android:background="@color/black_alpha_128"
            android:rotationY="40" />

    </LinearLayout>

</FrameLayout>